infra/database/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nosqlclient
spec:
  selector:
    app: nosqlclient
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
