infra/database/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nosqlclient
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: azure-dns
spec:
  tls:
  - hosts:
    - nosqlclient.moveez.de
    secretName: wildcard
  rules:
  - host: nosqlclient.moveez.de
    http:
      paths:
      - path: /
        backend:
          serviceName: nosqlclient
          servicePort: 3000
